# testtask

./: .gitignore  CMakeLists.txt  ChartView.cpp  CircleCreator.h  CollectPoints.cpp  CollectPoints.h  Ellipse.cpp  Ellipse.h  EllipseCreator.cpp  EllipseCreator.h  FileIO.h  GeometricPrimitive.h  GeometricPrimitiveCreator.h  Line.cpp  Line.h  LineCreator.cpp  LineCreator.h  MainWindow.cpp  MainWindow.h  MainWindowHandler.cpp  MainWindowHandler.h  Point.cpp  Point.h  PointCreator.cpp  PointCreator.h  TestTaskGUI.pro  Tests.cpp  fileio.cpp  main.cpp  pointcreator.cpp  pointparamerts.cpp  pointparamerts.h
Editor/: CircleCreator.cpp  CircleCreator.h  CommonConstants.cpp  CommonConstants.h  CommonConstantsEditor.cpp  CommonConstantsEditor.h  CreatorHandler.cpp  CreatorHandler.h  CurveSelector.cpp  CurveSelector.h  DisplayedCurve.cpp  DisplayedCurve.h  DisplayedFigure.cpp  DisplayedFigure.h  DisplayedObject.cpp  DisplayedObject.h  EllipseCreator.cpp  EllipseCreator.h  FileIO.cpp  FileIO.h  GeomPolylineCreator.cpp  GeomPolylineCreator.h  GeometricPrimitiveCreator.h  LineCreator.cpp  LineCreator.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowHandler.cpp  MainWindowHandler.h  NurbsCreator.h  PointCreator.cpp  PointCreator.h  Polyline.cpp  Polyline.h  PrintFigure.cpp  PrintFigure.h  ui_mainwindow.h
Math/: BoundingBox.cpp  BoundingBox.h  C2Curve.cpp  C2Curve.h  C2Curves.cpp  Circle.cpp  Circle.h  CommonConstantsMath.cpp  CommonConstantsMath.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  GeomPolyLine.cpp  GeomPolyline.h  GeometricPoint.cpp  GeometricPoint.h  GeometricPrimitive.h  Intersector.cpp  Intersector.h  Line.cpp  Line.h  NurbsCurve.cpp  NurbsCurve.h  Point.cpp  Point.h  Range.cpp  Range.h  Vector.cpp  Vector.h
Math/UnitTests/: utest_ellipse.cpp  utest_intersector.cpp  utest_line.cpp  utest_main.cpp  utest_nurbs.cpp  utest_polyline.cpp
Serealizer/: CurveSerializer.cpp  CurveSerializer.h  EllipseCurveSerializer.cpp  EllipseCurveSerializer.cxx  EllipseCurveSerializer.h  EllipseCurveSerializer.hxx  LineSerializer.cpp  LineSerializer.h  NURBSCurveSerializer.cpp  NURBSCurveSerializer.cxx  NURBSCurveSerializer.h  NURBSCurveSerializer.hxx  Serializer.cpp  Serializer.h  curveserializer.h
Serializer/: CurveSerializer.cpp  CurveSerializer.h  EllipseCurveSerializer.cpp  EllipseCurveSerializer.h  LineSerializer.cpp  LineSerializer.h  NURBSCurveSerializer.cpp  NURBSCurveSerializer.h  PolylineSerializer.cpp  PolylineSerializer.h  Serializer.cpp  Serializer.h
